# snapsafe

./: .gitignore  .snapsafeignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: constants.rs  info.rs  init.rs  list.rs  main.rs  manifest.rs  models.rs  repository.rs  snapshot.rs
src/subcommands/: config.rs  diff.rs  info.rs  init.rs  list.rs  meta.rs  mod.rs  prune.rs  restore.rs  snapshot.rs  tag.rs  verify.rs
tests/: cli_tests.rs
